# Master-Thesis-Ladimo-Project

./: CMakeLists.txt  Ladimo_Stereo_Matcher.cc  Ladimo_Stereo_Matcher.h  derivative_tester_main.cc  estimationSGMmethod.cc  estimationSGMmethod.h  getWrongPoints.cc  getWrongPoints.h  ioFunctions.cc  ioFunctions.h  main.cc  testFunctions.cc  testFunctions.h  tester_main.cc  tester_opencv_sgm_method.cc  usedStructnFunctions.cc  usedStructnFunctions.h
Files_folder/: bad_boys.txt  bad_boys_right.txt  bad_labels.txt  bad_points_left.txt  big_matrix.txt  coord_n_normal.txt  coord_n_normal_left.txt  coord_n_normal_right.txt  disparity_normal.txt  estimated_disparities.txt  estimated_disparity.txt  file_gridpoints_right.txt  file_normals.txt  file_normals_left.txt  file_normals_right.txt  file_pointcloud_XYZ_left.txt  file_pointcloud_XYZ_right.txt  file_pointcloud_xyd_left.txt  file_pointcloud_xyd_right.txt  full_matrix.txt  good_dots.txt  grid_matrix.txt  guessed_disparity.txt  guessed_disparity_census.txt  guessed_disparity_normalized.txt  guessed_disparity_normalized_census.txt  guessed_disparity_normalized_raw.txt  guessed_disparity_raw_diff.txt  lookup_table.txt  temp_matrix.txt
common-files/: common_structures.cc  common_structures.h  image_processing_function.cc  image_processing_function.h  io_functions.cc  io_functions.h
ladimo-grid-method/: estimation_functions_ladimo_grid_method.cc  estimation_functions_ladimo_grid_method.h  main_ladimo_grid_method.cc  support_functions_ladimo_grid_method.cc  support_functions_ladimo_grid_method.h  support_structures_ladimo_grid_method.cc  support_structures_ladimo_grid_method.h
opencv-builtin-method/: main_opencv_builtin_method.cc
simulated-grid-method/: estimation_functions_simulated_grid.cc  estimation_functions_simulated_grid.h  main_simulated_grid_method.cc  support_functions_simulated_grid.h  support_structures_simulated_grid.cc  support_structures_simulated_grid.h
